[gd_scene load_steps=4 format=3 uid="uid://b3dswrnglrvbo"]

[ext_resource type="Theme" uid="uid://d1stc5w463lhk" path="res://themes/battle_ui_theme.tres" id="1_r5wdv"]
[ext_resource type="Script" uid="uid://cknie72d4dsor" path="res://experiments/text_ui_animations/text_animations.gd" id="2_v7sp7"]
[ext_resource type="Script" uid="uid://bam6h3v3nay62" path="res://experiments/text_ui_animations/text_animate_controller.gd" id="3_m8cgf"]

[node name="TextUiAnimations" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r5wdv")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 52.0
offset_top = 58.0
offset_right = 241.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(95, 54)
theme = ExtResource("1_r5wdv")
theme_override_font_sizes/font_size = 84
text = "999"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_v7sp7")

[node name="Digits" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = 63.5
offset_right = -75.0
offset_bottom = 168.5
grow_horizontal = 2
grow_vertical = 2

[node name="Digit1" type="Label" parent="Digits"]
layout_mode = 2
offset_right = 63.0
offset_bottom = 105.0
theme = ExtResource("1_r5wdv")
theme_override_font_sizes/font_size = 84
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_v7sp7")

[node name="Digit2" type="Label" parent="Digits"]
layout_mode = 2
offset_left = 67.0
offset_right = 130.0
offset_bottom = 105.0
theme = ExtResource("1_r5wdv")
theme_override_font_sizes/font_size = 84
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_v7sp7")

[node name="Digit3" type="Label" parent="Digits"]
layout_mode = 2
offset_left = 134.0
offset_right = 197.0
offset_bottom = 105.0
theme = ExtResource("1_r5wdv")
theme_override_font_sizes/font_size = 84
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_v7sp7")

[node name="ScrollContainer" type="ScrollContainer" parent="." node_paths=PackedStringArray("text_anim_player", "digit1", "digit2", "digit3")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -268.0
offset_right = 268.0
offset_bottom = 229.0
grow_horizontal = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
script = ExtResource("3_m8cgf")
text_anim_player = NodePath("../Label")
digit1 = NodePath("../Digits/Digit1")
digit2 = NodePath("../Digits/Digit2")
digit3 = NodePath("../Digits/Digit3")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Text Animation Options"

[node name="TextAnim1" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Text Animation 1"

[node name="TextAnim2" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Text Animation 2"

[node name="TextAnim3" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Text Animation 3"

[node name="TextAnim4" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Text Animation 4"

[node name="TextAnim5" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Text Animation 5"

[node name="TextAnim6" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play Text Animation 6"
